--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,18 @@
         android:layout_centerHorizontal="false" />
 
     <Button
+        android:id="@+id/crop_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/resample_button"
+        android:layout_alignParentEnd="false"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="24dp"
+        android:onClick="REPETVocalClick"
+        android:text="Crop" />
+
+    <Button
         android:id="@+id/repet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
