--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,22 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.ece420.lab4.MainActivity">
 
     <Button
+        android:id="@+id/load_file_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Load Audio File"
+        android:onClick="loadFileClick"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
         android:id="@+id/capture_control_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/StartEcho"
         android:onClick="onEchoClick"
+        android:layout_below="@id/load_file_button"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
@@ -20,8 +31,9 @@
         android:layout_height="wrap_content"
         android:text="Something"
         android:onClick="doSomethingClick"
-        android:layout_centerVertical="false"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@id/capture_control_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp" />
 
     <Button
         android:id="@+id/resample_button"
